# test_ros2_navigation

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/test_ros2_navigation/share/test_ros2_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh  turtlebot3_house.launch.py
launch/: bringup_launch.py  bringup_launch_cartographer.launch.py  gamma_house.launch.py  localization_launch.py  localization_with_cartographer_launch.py  navigation2.launch.py  navigation2_cartograher.launch.py  navigation_launch.py  robot_state_publisher.launch.py  robot_state_publisher_gamma.launch.py  turtlebot3_house.launch.py
log/: latest_build
models/gamma/: model.config  model.sdf
models/gamma/meshes/: tire.dae
models/turtlebot3_waffle_pi/: model.config  model.sdf
models/turtlebot3_waffle_pi/meshes/: lds.dae  waffle_pi_base.dae
params/: nav2_params.yaml  nav2_params_gamma.yaml
robot_description/urdf/: orne_gamma.urdf  turtlebot3_waffle_pi.gazebo.xacro  turtlebot3_waffle_pi.urdf.xacro  turtlebot3_waffle_pi2.urdf
robot_description/urdf/gamma/: orne_gamma copy.urdf  orne_gamma.gazebo  orne_gamma.urdf.xacro  orne_gamma_caster_fix.urdf.xacro
rviz/: nav2_default_view2.rviz
worlds/: Tsudanuma_2-3.world  Tsudanuma_2-3_gamma.world  test.world
